syntax="proto3";

package proto;

option go_package=".;pb";
import "google/protobuf/empty.proto";

message UserRequest{
  string name=1;
  string email=2;
  string password=3;
  uint32 age=4;
}

message UserId{
  int32 id=1;
}

message UserResponse{
  string email=1;
  string name=2;
}

message GetAllUsersResponse{
  repeated UserResponse users=1;
}

service UserService{
  rpc RegisterUser(UserRequest) returns (UserResponse);
  rpc FindUserById(UserId) returns (UserResponse);
  rpc FindAllUsers(google.protobuf.Empty) returns (GetAllUsersResponse);
}
